--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,5 +1,12 @@
 [
   {
+    "name": "Online AI Dungeon Master",
+    "link": "https://github.com/noellerjd/dnd-project",
+    "short_description": "WIP - Designed to help me learn more about AI implementation, an online dungeon master using Google Gemini API to make a fun gameplay experience",
+    "description": "WIP - My online AI DM is designed to help me learn more about AI implementation, it features ways to store information like character abilities, character stats, and items. The idea would be that the AI can use these as a reference, in addition to dice roll logic implemented, to help inform the AI and cut down on unecessary reiteration with the AI.",
+    "technologies": ["NextJS", "HTML/CSS", "JavaScript", "Google Gemini API"]
+  },
+  {
     "name": "Type Bot",
     "link": "https://github.com/noellerjd/typebot",
     "short_description": "Personal Discord bot hosted on Docker.",
